--- a/PackManager/Base.lproj/Main_iPhone.storyboard
+++ b/PackManager/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
@@ -614,7 +614,7 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="tcg-UJ-2KW">
-                        <barButtonItem key="rightBarButtonItem" title="Settings" id="J5d-CR-E7a">
+                        <barButtonItem key="rightBarButtonItem" image="settings_icon.png" id="J5d-CR-E7a">
                             <connections>
                                 <segue destination="nYH-0f-KLo" kind="push" identifier="viewTripSettings" id="BlB-gO-jiD"/>
                             </connections>
@@ -654,6 +654,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2p3-XH-uUo">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196078431369" green="0.6470588235294118" blue="0.12549019607843137" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Going swimming" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2C6-ZB-Cei">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -673,6 +674,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="KvZ-8a-6S7">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Fancy dinner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="34H-wF-ASE">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -692,6 +694,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aVn-YJ-h9p">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Access to laundry room" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rib-ft-pEG">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -711,6 +714,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qyR-uY-BK7">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Willing to rewear jeans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7vT-O2-Hym">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -784,6 +788,7 @@
                                                         <segment title="Female"/>
                                                         <segment title="Male"/>
                                                     </segments>
+                                                    <color key="tintColor" red="0.85490196078431369" green="0.6470588235294118" blue="0.12549019607843137" alpha="1" colorSpace="deviceRGB"/>
                                                 </segmentedControl>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Gender" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O5x-ez-hql">
                                                     <rect key="frame" x="20" y="11" width="149" height="21"/>
@@ -810,6 +815,7 @@
                                                         <segment title="Celsius"/>
                                                         <segment title="Fahrenheit"/>
                                                     </segments>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </segmentedControl>
                                             </subviews>
                                             <constraints>
@@ -827,6 +833,7 @@
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="90" minValue="10" maxValue="120" translatesAutoresizingMaskIntoConstraints="NO" id="Y53-8I-HKA">
                                                     <rect key="frame" x="101" y="7" width="118" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="114" id="CUW-A0-Xob"/>
                                                     </constraints>
@@ -866,6 +873,7 @@
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="80" minValue="10" maxValue="120" translatesAutoresizingMaskIntoConstraints="NO" id="O3C-qo-Mu0">
                                                     <rect key="frame" x="101" y="7" width="118" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="114" id="VqT-fi-aUb"/>
                                                     </constraints>
@@ -905,6 +913,7 @@
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="70" minValue="10" maxValue="120" translatesAutoresizingMaskIntoConstraints="NO" id="esC-K0-9i9">
                                                     <rect key="frame" x="101" y="7" width="118" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="114" id="wwT-Yz-4en"/>
                                                     </constraints>
@@ -944,6 +953,7 @@
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="60" minValue="10" maxValue="120" translatesAutoresizingMaskIntoConstraints="NO" id="hQW-0V-78y">
                                                     <rect key="frame" x="101" y="7" width="118" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="114" id="aKK-Ue-aGc"/>
                                                     </constraints>
@@ -983,6 +993,7 @@
                                             <subviews>
                                                 <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="50" minValue="10" maxValue="120" translatesAutoresizingMaskIntoConstraints="NO" id="V8d-vv-qxs">
                                                     <rect key="frame" x="101" y="7" width="118" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="114" id="RWV-4n-8HO"/>
                                                     </constraints>
@@ -1026,6 +1037,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="BV4-VN-W7U">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Going swimming" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kCO-Ys-8yA">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -1055,6 +1067,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mno-ei-UZY">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Willing to rewear jeans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BS2-lC-hVK">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -1084,6 +1097,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8eI-61-tZg">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Fancy dinner" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="d4q-b5-ZIA">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -1113,6 +1127,7 @@
                                             <subviews>
                                                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zuQ-No-Gdv">
                                                     <rect key="frame" x="255" y="6" width="51" height="31"/>
+                                                    <color key="tintColor" red="0.85490196080000003" green="0.64705882349999999" blue="0.12549019610000001" alpha="1" colorSpace="deviceRGB"/>
                                                 </switch>
                                                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Access to laundry room" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TbM-hX-Fjy">
                                                     <rect key="frame" x="25" y="11" width="222" height="21"/>
@@ -1169,7 +1184,7 @@
         <scene sceneID="aur-e5-yXv">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="IZ0-Oa-ipT" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Trips" id="xNf-kR-IVU"/>
+                    <tabBarItem key="tabBarItem" title="Trips" image="trips-icon.png" id="xNf-kR-IVU"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="jxF-Jh-OYW">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1188,7 +1203,7 @@
         <scene sceneID="tAw-df-ZV6">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="aIC-AP-hhL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="wCz-dD-hoz"/>
+                    <tabBarItem key="tabBarItem" title="Profile" image="profile_icon.png" id="wCz-dD-hoz"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="EFq-0A-XXf">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -1204,6 +1219,11 @@
             <point key="canvasLocation" x="525" y="180"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="profile_icon.png" width="30" height="30"/>
+        <image name="settings_icon.png" width="30" height="30"/>
+        <image name="trips-icon.png" width="30" height="30"/>
+    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
